--- a/examples/mnist_tensorflow.ipynb
+++ b/examples/mnist_tensorflow.ipynb
@@ -6,7 +6,8 @@
     "collapsed": true
    },
    "source": [
-    "## Example: MNIST using a MLP on Tensorflow"
+    "## DeepExplain - Tensorflow example\n",
+    "### MNIST with a 2-layers MLP"
    ]
   },
   {
