--- a/examples/mint_cnn_keras.ipynb
+++ b/examples/mint_cnn_keras.ipynb
@@ -113,10 +113,7 @@
     "          validation_data=(x_test, y_test))\n",
     "score = model.evaluate(x_test, y_test, verbose=0)\n",
     "print('Test loss:', score[0])\n",
-    "print('Test accuracy:', score[1])\n",
-    "    \n",
-    "\n",
-    "        "
+    "print('Test accuracy:', score[1])"
    ]
   },
   {
@@ -190,7 +187,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -201,5 +198,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
