WIP on Inception V3 / ImageNet example

--- a/examples/mint_cnn_keras.ipynb
+++ b/examples/mint_cnn_keras.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -36,11 +36,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x_train shape: (60000, 28, 28, 1)\n",
+      "60000 train samples\n",
+      "10000 test samples\n",
+      "Train on 60000 samples, validate on 10000 samples\n",
+      "Epoch 1/3\n",
+      "60000/60000 [==============================] - 12s - loss: 0.3214 - acc: 0.9016 - val_loss: 0.0673 - val_acc: 0.9782\n",
+      "Epoch 2/3\n",
+      "60000/60000 [==============================] - 8s - loss: 0.1044 - acc: 0.9696 - val_loss: 0.0550 - val_acc: 0.9825\n",
+      "Epoch 3/3\n",
+      "60000/60000 [==============================] - 9s - loss: 0.0777 - acc: 0.9776 - val_loss: 0.0430 - val_acc: 0.9863\n",
+      "Test loss: 0.0430473223241\n",
+      "Test accuracy: 0.9863\n"
+     ]
+    }
+   ],
    "source": [
     "# Build and train a network.\n",
     "\n",
@@ -110,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
