--- a/examples/inception_tensorflow.ipynb
+++ b/examples/inception_tensorflow.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -95,9 +95,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from data/models/adv_inception_v3.ckpt\n",
+      "INFO:tensorflow:Restoring parameters from data/models/inception_v3.ckpt\n",
+      "data/images/0c7ac4a8c9dfa802.png\n",
       "data/images/1c2e9fe8b0b2fdf2.png\n",
-      "['1c2e9fe8b0b2fdf2.png'] [58]\n"
+      "data/images/5b3a8c63e41802e7.png\n",
+      "data/images/4fc263d35a3ad3ee.png\n",
+      "['4fc263d35a3ad3ee.png'] [244]\n"
      ]
     }
    ],
@@ -110,8 +113,8 @@
     "# Select the model here. Use adv_inception_v3 to use the weights of\n",
     "# an adversarially trained Inception V3. Explanations will be more sparse.\n",
     "\n",
-    "# checkpoint = 'data/models/inception_v3.ckpt'\n",
-    "checkpoint = 'data/models/adv_inception_v3.ckpt'\n",
+    "checkpoint = 'data/models/inception_v3.ckpt'\n",
+    "# checkpoint = 'data/models/adv_inception_v3.ckpt'\n",
     "\n",
     "tf.reset_default_graph()\n",
     "sess = tf.Session()\n",
@@ -213,15 +216,6 @@
     "    for j, a in enumerate(attributions):\n",
     "        plot(attributions[a][i], xi = xi, axis=axes[j+1], dilation=.5, percentile=97, alpha=.2).set_title(a)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
