Support for multiple inputs (gradient-based methods only)

--- a/examples/mint_cnn_keras.ipynb
+++ b/examples/mint_cnn_keras.ipynb
@@ -1,8 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "## DeepExplain - Keras (TF backend) example\n",
     "### MNIST with CNN"
@@ -10,11 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
@@ -36,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -50,19 +62,18 @@
       "10000 test samples\n",
       "Train on 60000 samples, validate on 10000 samples\n",
       "Epoch 1/3\n",
-      "60000/60000 [==============================] - 12s - loss: 0.3214 - acc: 0.9016 - val_loss: 0.0673 - val_acc: 0.9782\n",
+      "60000/60000 [==============================] - 11s - loss: 0.3070 - acc: 0.9062 - val_loss: 0.0685 - val_acc: 0.9781\n",
       "Epoch 2/3\n",
-      "60000/60000 [==============================] - 8s - loss: 0.1044 - acc: 0.9696 - val_loss: 0.0550 - val_acc: 0.9825\n",
+      "60000/60000 [==============================] - 8s - loss: 0.1042 - acc: 0.9691 - val_loss: 0.0549 - val_acc: 0.9833\n",
       "Epoch 3/3\n",
-      "60000/60000 [==============================] - 9s - loss: 0.0777 - acc: 0.9776 - val_loss: 0.0430 - val_acc: 0.9863\n",
-      "Test loss: 0.0430473223241\n",
-      "Test accuracy: 0.9863\n"
+      "60000/60000 [==============================] - 8s - loss: 0.0787 - acc: 0.9767 - val_loss: 0.0398 - val_acc: 0.9862\n",
+      "Test loss: 0.0397930024776\n",
+      "Test accuracy: 0.9862\n"
      ]
     }
    ],
    "source": [
     "# Build and train a network.\n",
-    "\n",
     "\n",
     "batch_size = 128\n",
     "num_classes = 10\n",
@@ -129,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -208,7 +219,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
